; ModuleID = '/home/carl/AnghaBench/RetroArch/input/drivers_joypad/extr_hid_joypad.c_hid_joypad_poll.c'
source_filename = "/home/carl/AnghaBench/RetroArch/input/drivers_joypad/extr_hid_joypad.c_hid_joypad_poll.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 (i8*)* }

@generic_hid = common dso_local global %struct.TYPE_2__* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @hid_joypad_poll to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @hid_joypad_poll() #0 {
  %1 = load %struct.TYPE_2__*, %struct.TYPE_2__** @generic_hid, align 8
  %2 = icmp ne %struct.TYPE_2__* %1, null
  br i1 %2, label %3, label %15

3:                                                ; preds = %0
  %4 = load %struct.TYPE_2__*, %struct.TYPE_2__** @generic_hid, align 8
  %5 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %4, i32 0, i32 0
  %6 = load i32 (i8*)*, i32 (i8*)** %5, align 8
  %7 = icmp ne i32 (i8*)* %6, null
  br i1 %7, label %8, label %15

8:                                                ; preds = %3
  %9 = load %struct.TYPE_2__*, %struct.TYPE_2__** @generic_hid, align 8
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load i32 (i8*)*, i32 (i8*)** %10, align 8
  %12 = call i64 (...) @hid_driver_get_data()
  %13 = inttoptr i64 %12 to i8*
  %14 = call i32 %11(i8* %13)
  br label %15

15:                                               ; preds = %8, %3, %0
  ret void
}

declare dso_local i64 @hid_driver_get_data(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
